third_party/move/move-compiler-v2/tests/checking-lang-v2.4/package_const_cross_package_rejected.exp

Diagnostics:
error: constant `0x42::M::PKG` cannot be used here due to visibility constraints
   ┌─ tests/checking-lang-v2.4/package_const_cross_package_rejected.move:12:9
   │
12 │         M::PKG
   │         ^^^^^^
