third_party/move/move-compiler-v2/tests/checking-lang-v2.4/package_const_cross_package_rejected.move
// Tests that package constants cannot be accessed from a different package (address).

module 0x42::M {
    package const PKG: u64 = 10;
}

// Different address = different package: access must be rejected.
module 0x43::N {
    use 0x42::M;

    public fun use_pkg(): u64 {
        M::PKG
    }
}
